--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,20 @@
   <title>Document</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&family=Raleway:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&family=Raleway:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
 </head>
+
 <body>
-    <header class="header">
+  <header class="header">
     <div class="container header-inner">
       <div class="header-top">
         <a href="#" class="logo">
-          <img src="../images/logo.png" alt="logo">
+          <img src="images/logo.png" alt="logo">
         </a>
         <nav class="main-nav">
           <ul class="main-nav-list">
@@ -59,44 +63,52 @@
     </div>
   </div>
   <div class="two-blocks">
-   <div class="container blocks">
+    <div class="container blocks">
       <div class="block">
         <h4 class="two-blocks-title">#1 Webhost Services</h4>
-        <p class="two-blocks-subtitle">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. </p>
+        <p class="two-blocks-subtitle">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+          aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id
+          elit. </p>
         <a href="#" class="two-blocks-link left-link">More</a>
       </div>
-    
+
       <div class="block">
         <h4 class="two-blocks-title">#1 Domain Services</h4>
-        <p class="two-blocks-subtitle">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. </p>
+        <p class="two-blocks-subtitle">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+          aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id
+          elit. </p>
         <a href="#" class="two-blocks-link right-link">More</a>
       </div>
     </div>
   </div>
-   <div class="block-cards">
-    <div class="container" >
+  <div class="block-cards">
+    <div class="container">
       <h3 class="block-cards-title">Our Features</h3>
       <p class="block-cards-subtitle">Our Best Features</p>
     </div>
     <div class="cards container">
       <div class="card">
         <h4 class="cards-title card-1">Live Support</h4>
-        <p class="cards-subtitle">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. amet mauris. Morbi accumsan ipsum velit. </p>
+        <p class="cards-subtitle">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+          aliquet. amet mauris. Morbi accumsan ipsum velit. </p>
         <a href="#" class="cards-link">Read more</a>
       </div>
       <div class="card ">
         <h4 class="cards-title card-2">Cloud Technology</h4>
-        <p class="cards-subtitle">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. </p>
+        <p class="cards-subtitle">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+          aliquet. </p>
         <a href="#" class="cards-link">Read more</a>
       </div>
       <div class="card ">
         <h4 class="cards-title card-3">Cloud Technology</h4>
-        <p class="cards-subtitle">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.</p>
+        <p class="cards-subtitle">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+          aliquet.</p>
         <a href="#" class="cards-link">Read more</a>
       </div>
       <div class="card ">
         <h4 class="cards-title card-4">Live Monitoring</h4>
-        <p class="cards-subtitle">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. </p>
+        <p class="cards-subtitle">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+          aliquet. </p>
         <a href="#" class="cards-link">Read more</a>
       </div>
     </div>
@@ -104,7 +116,8 @@
   <div class="clients-block container">
     <div class="clients">
       <h5 class="clients-title">Our Clients</h5>
-      <p class="clients-subtitle">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum.</p>
+      <p class="clients-subtitle">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+        aliquet. Aenean sollicitudin, lorem quis bibendum.</p>
     </div>
     <div class="clients-links">
       <a href="#" class="client-link"><img src="images/company-1.jpg" alt="company"></a>
@@ -115,17 +128,20 @@
   </div>
   <div class="coments container">
     <div class="coment">
-      <p class="coment-text">“ This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. ”</p>
+      <p class="coment-text">“ This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+        Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. ”</p>
       <p class="author">-Anna</p>
       <a href="#" class="img"><img src="images/anna.png" alt="anna" class="coment-img"></a>
     </div>
     <div class="coment">
-      <p class="coment-text">“ This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. ”</p>
+      <p class="coment-text">“ This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+        Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. ”</p>
       <p class="author">-John Doe</p>
       <a href="#" class="img"><img src="images/john.png" alt="john" class="coment-img"></a>
     </div>
     <div class="coment">
-      <p class="coment-text">“ Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. ”</p>
+      <p class="coment-text">“ Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
+        auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. ”</p>
       <p class="author">-Anna</p>
       <a href="#" class="img"><img src="images/anna.png" alt="anna" class="coment-img"></a>
     </div>
@@ -136,4 +152,5 @@
     </div>
   </footer>
 </body>
+
 </html>
